--- a/package.json
+++ b/package.json
@@ -45,16 +45,19 @@
   ],
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.2",
+    "aes-256-gcm": "^1.0.3",
     "axios": "^0.21.1",
     "bootstrap": "4.6.0",
     "chart.js": "2.9.4",
     "classnames": "2.2.6",
+    "cryptr": "^6.0.2",
     "jwt-decode": "^3.1.2",
     "moment": "2.29.1",
     "node-sass": "4.14.1",
     "node-sass-package-importer": "5.3.2",
     "nouislider": "14.6.3",
     "react": "17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-chartjs-2": "2.11.1",
     "react-copy-to-clipboard": "5.0.3",
     "react-datetime": "3.0.4",
